--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         predictionElement.textContent = predictData;
 
         // LIME API call
-        const limeResponse = await fetch('hhttp://localhost:8000/lime', {
+        const limeResponse = await fetch('http://localhost:8000/lime', {
           method: 'POST',
           body: formData,
         });
